force-app/main/default/objects/Creative_Asset__c/Creative_Asset__c.object-meta.xml
<CustomObject>
    <label>Creative Asset</label>
    <nameField>
        <label>Creative Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>