force-app/main/default/objects/Creative_Asset__c/fields/Asset_File_Size__c.field-meta.xml
<CustomField>
    <fullName>Asset_File_Size__c</fullName>
    <description>Asset file size</description>
    <inlineHelpText>Asset file size</inlineHelpText>
    <label>Asset File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>