force-app/main/default/objects/Creative_Asset__c/fields/Asset_Height__c.field-meta.xml
<CustomField>
    <fullName>Asset_Height__c</fullName>
    <description>Asset pixel height</description>
    <inlineHelpText>Asset pixel height</inlineHelpText>
    <label>Asset Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>