force-app/main/default/objects/Creative_Asset__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <description>Name of the asset, set by the client. 200 character maximum</description>
    <inlineHelpText>Name of the asset, set by the client. 200 character maximum</inlineHelpText>
    <label>Asset Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>