force-app/main/default/objects/Creative_Asset__c/fields/Asset_Preview__c.field-meta.xml
<CustomField>
    <fullName>Asset_Preview__c</fullName>
    <formula>IMAGE( Published_URL__c  , &quot;Not Available&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Preview</label>
    <type>Text</type>
</CustomField>