force-app/main/default/objects/Creative_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>The type of the asset saved as a name/ID pair</description>
    <inlineHelpText>The type of the asset saved as a name/ID pair</inlineHelpText>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>28</fullName>
                <label>png</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>gif</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>jpg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>