force-app/main/default/objects/Creative_Asset__c/fields/Asset_Width__c.field-meta.xml
<CustomField>
    <fullName>Asset_Width__c</fullName>
    <description>Asset pixel width</description>
    <inlineHelpText>Asset pixel width</inlineHelpText>
    <label>Asset Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>