force-app/main/default/objects/Creative_Asset__c/fields/Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key__c</fullName>
    <description>Reference to customer&apos;s private ID/name for the asset</description>
    <inlineHelpText>Reference to customer&apos;s private ID/name for the asset</inlineHelpText>
    <label>Customer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>