force-app/main/default/objects/Creative_Asset__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the asset, set by the client</description>
    <inlineHelpText>Description of the asset, set by the client</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>