force-app/main/default/objects/Creative_Asset__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Asset File Name</description>
    <inlineHelpText>Asset File Name</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>