force-app/main/default/objects/Creative_Asset__c/fields/Internal_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Asset_Id__c</fullName>
    <description>Internal Marketing Cloud Identifier</description>
    <inlineHelpText>Internal Marketing Cloud Identifier</inlineHelpText>
    <label>Internal Asset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>