force-app/main/default/objects/Creative_Asset__c/fields/Published_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Published_Datetime__c</fullName>
    <description>Date and time when the asset was published</description>
    <inlineHelpText>Date and time when the asset was published</inlineHelpText>
    <label>Published Datetime</label>
    <type>DateTime</type>
</CustomField>