force-app/main/default/objects/Creative_Asset__c/fields/Published_URL__c.field-meta.xml
<CustomField>
    <fullName>Published_URL__c</fullName>
    <description>Asset is available at this URL</description>
    <inlineHelpText>Asset is available at this URL</inlineHelpText>
    <label>Published URL</label>
    <type>Url</type>
</CustomField>