force-app/main/default/objects/Creative_Asset__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The version of the asset</description>
    <inlineHelpText>The version of the asset</inlineHelpText>
    <label>Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>